Add account controller and corresponding documentation.
